plugins {
    id 'com.android.library'
    id 'maven-publish'
}

android {
    namespace 'com.pchmn.materialchips'
    compileSdkVersion 33

    defaultConfig {
        minSdkVersion 15
        targetSdkVersion 33
        versionCode 9
        versionName "1.0.8"

        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
    lintOptions {
        disable 'GradleDependency', 'ExpiringTargetSdkVersion'
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:appcompat-v7:25.3.0'

    // recycler
    implementation 'com.android.support:recyclerview-v7:25.3.0'
    implementation 'com.github.BelooS:ChipsLayoutManager:v0.3.7'

    // circle image view
    implementation 'de.hdodenhof:circleimageview:2.1.0'
}


afterEvaluate {
    publishing {
        repositories {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/drdream-space/nachos")
                credentials {
                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                    password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
                }
            }
        }
        publications {
            release(MavenPublication) {
                from components.findByName('release')
                groupId = "dream-space"
                artifactId = "dreamspace.MaterialChipsInput"
                version = "1.2"
            }
        }
    }
}


